--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "marked": "^4.0.4",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sanitize-html": "^2.5.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
